deploy: a2bdad719b82245812f8f24c653e517e90c1ea03

--- a/submissions.html
+++ b/submissions.html
@@ -2280,7 +2280,7 @@ d-article > * {
 <li>A list of R packages needed to reproduce the submission. This can be in the form of a file <code>_Rpackages.txt</code> with a list of packages, one per line.</li>
 </ul>
 <p>You may have problems submitting if the size of your submission zip file is more than 10Mb. If you have large data files, you can make them available on an alternative site and provide the links in the paper.</p>
-<p>Please ensure that the submission can be reproduced in a timely manner, perhaps by reducing the example data size. If necessary, intermediate output files, can be provided to shorten the run time.</p>
+<p>Please ensure that the submission can be reproduced in a timely manner, perhaps by reducing the example data size. If a submission cannot be reproduced in a reasonable time (<em>less than 10 minutes</em>), it will be sent back to you. For very computationally intensive methods, it is recommended that you include scripts to generate intermediate outputs, and that your main paper use these outputs rather than re-running the full computations. That way, we can see the full reproducible workflow, but the review process is not delayed by long computation times.</p>
 <p>If you have problems, please contact the Editor-in-Chief at <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a>.</p>
 <p>Re-submissions and revisions to articles should be submitted in the same way. When providing a re-submission or revision, you will need to <strong>enter the identifier of the original submission</strong> in the last field of the submission form.</p>
 <h1 id="after-submitting-your-article">After submitting your article</h1>
