deploy: 57d532e2bef0888c0336dd05d19d071835157c7a

--- a/submissions.html
+++ b/submissions.html
@@ -2235,7 +2235,7 @@ d-article > * {
 }
 </style>
 </div>
-<p>Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere. See our <a href="R_package_guidelines.html">guidelines for papers about R packages</a>.</p>
+<p>Articles for the R Journal should be no more than 20 pages, on topics of interest to the R community. Articles must not be published or submitted for publication elsewhere. See our <a href="R_package_guidelines.html">guidelines for papers about R packages</a>. Papers must be fully reproducible, and all code and data must be made available (publicly if we publish your submission).</p>
 <h1 id="creating-your-article">Creating your article</h1>
 <h3 id="rmarkdown-using-rjtools">Rmarkdown using rjtools</h3>
 <p>The <a href="https://rjournal.github.io/rjtools/">rjtools</a> package has a template to create the files needed for a submission in the form required by the R Journal.</p>
