--- a/_news/RJ-2025-3-editorial/RJ-2025-3-editorial.html
+++ b/_news/RJ-2025-3-editorial/RJ-2025-3-editorial.html
@@ -118,7 +118,8 @@ code span.wa { color: #5e5e5e; font-style: italic; }
   <meta name="citation_issue" content="3" />
   <meta name="citation_journal_title" content="The R Journal" />
   <meta name="citation_issn" content="2073-4859" />
-  <meta name="citation_firstpage" content="1" />
+  <meta name="citation_firstpage" content="3" />
+  <meta name="citation_lastpage" content="3" />
   <meta name="citation_fulltext_world_readable" content />
   <meta name="citation_online_date" content="2025/09/01" />
   <meta name="citation_publication_date" content="2025/09/01" />
@@ -128,7 +129,7 @@ code span.wa { color: #5e5e5e; font-style: italic; }
   <!--radix_placeholder_rmarkdown_metadata-->
 
   <script type="text/json" id="radix-rmarkdown-metadata">
-  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","draft","author","date","creative_commons","output","header-includes","volume","issue","slug","description","journal","pdf_url","citation_url","packages","CTV","csl"]}},"value":[{"type":"character","attributes":{},"value":["Editorial"]},{"type":"logical","attributes":{},"value":[false]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","url","email"]}},"value":[{"type":"character","attributes":{},"value":["Rob J Hyndman"]},{"type":"character","attributes":{},"value":["Monash University"]},{"type":"character","attributes":{},"value":["https://journal.r-project.org"]},{"type":"character","attributes":{},"value":["r-journal@r-project.org"]}]}]},{"type":"character","attributes":{},"value":["2025-09-01"]},{"type":"character","attributes":{},"value":["CC BY"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["\\usepackage{parskip}"]},{"type":"integer","attributes":{},"value":[17]},{"type":"integer","attributes":{},"value":[3]},{"type":"character","attributes":{},"value":["RJ-2025-3-editorial"]},{"type":"character","attributes":{},"value":["\"Editorial\" published in The R Journal."]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","issn","firstpage","lastpage"]}},"value":[{"type":"character","attributes":{},"value":["The R Journal"]},{"type":"character","attributes":{},"value":["2073-4859"]},{"type":"double","attributes":{},"value":[1]},{"type":"NULL"}]},{"type":"character","attributes":{},"value":["RJ-2025-3-editorial.pdf"]},{"type":"character","attributes":{},"value":["https://journal.r-project.org/news/RJ-2025-3-editorial"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["cran","bioc"]}},"value":[{"type":"list","attributes":{},"value":[]},{"type":"list","attributes":{},"value":[]}]},{"type":"list","attributes":{},"value":[]},{"type":"character","attributes":{},"value":["/home/robjhyndman/R/x86_64-pc-linux-gnu-library/4.5/rjtools/rjournal.csl"]}]}
+  {"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","draft","author","date","creative_commons","output","header-includes","volume","issue","slug","journal","description","pdf_url","citation_url","packages","CTV","csl"]}},"value":[{"type":"character","attributes":{},"value":["Editorial"]},{"type":"logical","attributes":{},"value":[false]},{"type":"list","attributes":{},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["name","affiliation","url","email"]}},"value":[{"type":"character","attributes":{},"value":["Rob J Hyndman"]},{"type":"character","attributes":{},"value":["Monash University"]},{"type":"character","attributes":{},"value":["https://journal.r-project.org"]},{"type":"character","attributes":{},"value":["r-journal@r-project.org"]}]}]},{"type":"character","attributes":{},"value":["2025-09-01"]},{"type":"character","attributes":{},"value":["CC BY"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["distill::distill_article"]}},"value":[{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["self_contained","toc"]}},"value":[{"type":"logical","attributes":{},"value":[true]},{"type":"logical","attributes":{},"value":[false]}]}]},{"type":"character","attributes":{},"value":["\\usepackage{parskip}"]},{"type":"integer","attributes":{},"value":[17]},{"type":"integer","attributes":{},"value":[3]},{"type":"character","attributes":{},"value":["RJ-2025-3-editorial"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["title","issn","firstpage","lastpage"]}},"value":[{"type":"character","attributes":{},"value":["The R Journal"]},{"type":"character","attributes":{},"value":["2073-4859"]},{"type":"integer","attributes":{},"value":[3]},{"type":"integer","attributes":{},"value":[3]}]},{"type":"character","attributes":{},"value":["\"Editorial\" published in The R Journal."]},{"type":"character","attributes":{},"value":["RJ-2025-3-editorial.pdf"]},{"type":"character","attributes":{},"value":["https://journal.r-project.org/news/RJ-2025-3-editorial"]},{"type":"list","attributes":{"names":{"type":"character","attributes":{},"value":["cran","bioc"]}},"value":[{"type":"list","attributes":{},"value":[]},{"type":"list","attributes":{},"value":[]}]},{"type":"list","attributes":{},"value":[]},{"type":"character","attributes":{},"value":["/home/mitchell/R/x86_64-pc-linux-gnu-library/4.5/rjtools/rjournal.csl"]}]}
   </script>
   <!--/radix_placeholder_rmarkdown_metadata-->
   
@@ -2417,15 +2418,11 @@ distill-header .nav a {
       document.addEventListener('DOMContentLoaded', () => {
         if (document.getElementById('supplementary-materials')) {
           // create element safely
-          const a = document.createElement('a');
-          a.href = slug + '.zip';
-          a.className = 'dt-tag';
-          a.innerHTML = '<i class="fas fa-file-zipper"></i> Supplement';
-          // append depending on what `buttons` is:
-          // if buttons is a DOM node:
-          buttons.appendChild(a);
-          // OR if buttons is a selector string:
-          // document.querySelector(buttons).appendChild(a);
+          const btn_suppl = document.createElement('a');
+          btn_suppl.href = slug + '.zip';
+          btn_suppl.className = 'dt-tag';
+          btn_suppl.innerHTML = '<i class="fas fa-file-zipper"></i> Supplement';
+          buttons.append(btn_suppl);
         }
       });
 
@@ -2614,7 +2611,7 @@ font-size: 20px;
   volume = {17},
   issue = {3},
   issn = {2073-4859},
-  pages = {1}
+  pages = {3-3}
 }</pre>
 </div>
 <!--/radix_placeholder_appendices-->
