2025-3 issue ready for author review

--- a/_issues/2025-3/2025-3.html
+++ b/_issues/2025-3/2025-3.html
@@ -135,16 +135,14 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
       buttons.append('<a href="' + slug + '.pdf" class="dt-tag"><i class="fas fa-file-pdf"></i> PDF</a>')
       
       // Conditionally add supplementary files button
-      document.addEventListener('DOMContentLoaded', () => {
-        if (document.getElementById('supplementary-materials')) {
-          // create element safely
-          const btn_suppl = document.createElement('a');
-          btn_suppl.href = slug + '.zip';
-          btn_suppl.className = 'dt-tag';
-          btn_suppl.innerHTML = '<i class="fas fa-file-zipper"></i> Supplement';
-          buttons.append(btn_suppl);
-        }
-      });
+      if (document.getElementById('supplementary-materials')) {
+        // create element safely
+        const btn_suppl = document.createElement('a');
+        btn_suppl.href = slug + '.zip';
+        btn_suppl.className = 'dt-tag';
+        btn_suppl.innerHTML = '<i class="fas fa-file-zipper"></i> Supplement';
+        buttons.append(btn_suppl);
+      }
 
       // adds Abstract: in front of the first <p> in the title section --
       // unless it happens to be the subtitle (FIXME: this is a bad hack - can't distill do this?)
@@ -1751,17 +1749,17 @@ code span.wa { color: #5e5e5e; font-style: italic; } /* Warning */
 <h2 id="table-of-contents">Table of contents</h2>
 <p><a href="../../news/RJ-2025-3-editorial/">Editorial</a><br>Rob J Hyndman 3</p>
 <h3 id="contributed-research-articles">Contributed Research Articles</h3>
-<p><a href="../../articles/RJ-2025-021/"><strong>lsirm12pl</strong>: An R Package for the Latent Space Item Response Model</a><br>Dongyoung Go, Gwanghee Kim, Jina Park, Junyong Park, Minjeong Jeon and Ick Hoon Jin 4</p>
-<p><a href="../../articles/RJ-2025-022/">Converting LaTeX Legacy R Journal Articles into R Markdown Articles using texor and rebib</a><br>Abhishek Ulayil, Dianne Cook, Heather Turner, Mitch O’Hara-Wild and Christophe Dervieux 30</p>
+<p><a href="../../articles/RJ-2025-021/">lsirm12pl: An R Package for the Latent Space Item Response Model</a><br>Dongyoung Go, Gwanghee Kim, Jina Park, Junyong Park, Minjeong Jeon and Ick Hoon Jin 4</p>
+<p><a href="../../articles/RJ-2025-022/">Converting LaTeX Legacy R Journal Articles into R Markdown Articles using texor and rebib</a><br>Abhishek Ulayil, Dianne Cook, Heather Turner, Mitchell O’Hara-Wild and Christophe Dervieux 30</p>
 <p><a href="../../articles/RJ-2025-023/">Feature-Based Time-Series Analysis in R using the Theft Ecosystem</a><br>Trent Henderson and Ben D. Fulcher 43</p>
 <p><a href="../../articles/RJ-2025-024/">QTE.RD: An R Package for Quantile Treatment Effects in Regression-Discontinuity Designs</a><br>Zhongjun Qu and Jungmo Yoon 69</p>
 <p><a href="../../articles/RJ-2025-025/">BoundaryStats: An R Package to Calculate Boundary Overlap Statistics</a><br>Amy Luo 89</p>
-<p><a href="../../articles/RJ-2025-026/"><code>R</code> package <strong>GofCens</strong>: Goodness-of-Fit Methods for Right-Censored Data</a><br>Mireia Besalú, Klaus Langohr, Matilde Francisco, Arnau Garcia-Fernández and Guadalupe Gómez Melis 100</p>
-<p><a href="../../articles/RJ-2025-031/">moonboot: An R Package Implementing m-out-of-n Bootstrap Methods</a><br>Christoph Dalitz and Felix 125</p>
-<p><a href="../../articles/RJ-2025-027/">Rgof and R2sample: Testing and Benchmarking for the Univariate Goodness-of-Fit and Two-Sample Problems</a><br>Wolfgang Rolke 140</p>
-<p><a href="../../articles/RJ-2025-028/">Rendering LaTeX in R</a><br>Paul Murrell 164</p>
-<p><a href="../../articles/RJ-2025-029/">lqmix: an R Package for Longitudinal Data Analysis via Linear Quantile Mixtures</a><br>Marco Alfó, Maria Francesca Marino, Maria Giovanna Ranalli and Nicola Salvati 190</p>
-<p><a href="../../articles/RJ-2025-030/">Exploring Image Analysis in R: Applications and Advancements</a><br>Tim Brauckhoff, Julius Rublack and Stefan Rödiger (corresponding author) 214</p>
+<p><a href="../../articles/RJ-2025-026/">R package GofCens: Goodness-of-Fit Methods for Right-Censored Data</a><br>Mireia Besalú, Klaus Langohr, Matilde Francisco, Arnau Garcia-Fernández and Guadalupe Gómez Melis 100</p>
+<p><a href="../../articles/RJ-2025-031/">moonboot: An R Package Implementing m-out-of-n Bootstrap Methods</a><br>Christoph Dalitz and Felix Lögler 125</p>
+<p><a href="../../articles/RJ-2025-027/">Rgof and R2sample: Testing and Benchmarking for the Univariate Goodness-of-Fit and Two-Sample Problems</a><br>Wolfgang Rolke 138</p>
+<p><a href="../../articles/RJ-2025-028/">Rendering LaTeX in R</a><br>Paul Murrell 162</p>
+<p><a href="../../articles/RJ-2025-029/">lqmix: an R Package for Longitudinal Data Analysis via Linear Quantile Mixtures</a><br>Marco Alfó, Maria Francesca Marino, Maria Giovanna Ranalli and Nicola Salvati 188</p>
+<p><a href="../../articles/RJ-2025-030/">Exploring Image Analysis in R: Applications and Advancements</a><br>Tim Brauckhoff, Julius Rublack and Stefan Rödiger 212</p>
 <!--radix_placeholder_article_footer-->
 <!--/radix_placeholder_article_footer-->
 </div>
