deploy: 0eb925c84169eee7d518b4fcca1342a9364bd5af

--- a/articles.html
+++ b/articles.html
@@ -2485,7 +2485,7 @@ contained within it.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img src="articles/RJ-2025-022/figures/wf.png"/>
+<img/>
 </div>
 <div class="description">
 <h2>Converting LaTeX Legacy R Journal Articles into R Markdown Articles using texor and rebib</h2>
@@ -2503,7 +2503,7 @@ contained within it.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img data-src="articles/RJ-2025-023/figures/workflow-graphic_ecosystem-final.png"/>
 </div>
 <div class="description">
 <h2>Feature-Based Time-Series Analysis in R using the Theft Ecosystem</h2>
@@ -2547,7 +2547,7 @@ the impact of tracking on student achievement.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img/>
+<img data-src="articles/RJ-2025-025/figures/fig1.png"/>
 </div>
 <div class="description">
 <h2>BoundaryStats: An R Package to Calculate Boundary Overlap Statistics</h2>
