deploy: 473e3304633db314dda5184a7a3b79199783ce82

--- a/articles.html
+++ b/articles.html
@@ -2503,7 +2503,7 @@ contained within it.</p>
 </div>
 </div>
 <div class="thumbnail">
-<img data-src="articles/RJ-2025-023/figures/workflow-graphic_ecosystem-final.png"/>
+<img/>
 </div>
 <div class="description">
 <h2>Feature-Based Time-Series Analysis in R using the Theft Ecosystem</h2>
