--- a/articles.html
+++ b/articles.html
@@ -2411,7 +2411,7 @@ works under weaker conditions than the n-out-of-n bootstrap. It has
 the disadvantage, however, that it requires knowledge of an
 appropriate scaling factor tau(n) and that the coverage probability
 for finite n depends on the choice of m. This article presents an R
-package moonboot
+package [**moonboot**](https://CRAN.R-project.org/package=moonboot)
 which implements the computation of m-out-of-n bootstrap confidence
 intervals and provides functions for estimating the parameters tau(n)
 and m. By means of Monte Carlo simulations, we evaluate the different
