deploy: 3d478b564dac6540cb6f6f00b780c30a779db8cb

--- a/editors.html
+++ b/editors.html
@@ -2236,19 +2236,19 @@ d-article > * {
 </style>
 </div>
 <h2 id="editor-in-chief">Editor-in-Chief</h2>
-<p><a href="https://robjhyndman.com">Rob Hyndman</a>, Monash University, Australia. <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></p>
+<p><a href="https://emitanaka.org">Emi Tanaka</a>, Australian National University, Australia</p>
 <h2 id="executive-editors">Executive editors</h2>
 <ul>
-<li><a href="https://emitanaka.org">Emi Tanaka</a>, Australian National University, Australia</li>
-<li><a href="https://www.markvanderloo.eu">Mark van der Loo</a>, Statistics Netherlands and University of Leiden, The Netherlands</li>
+<li><a href="https://arelbundock.com">Vincent Arel-Bundock</a>, University of Montreal, Canada</li>
+<li><a href="https://robjhyndman.com">Rob Hyndman</a>, Monash University, Australia. <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></li>
 <li><a href="https://www.emilyzabor.com">Emily Zabor</a>, Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.</li>
 </ul>
 <h2 id="associate-editors">Associate editors</h2>
 <ul>
 <li><a href="https://rafamoral.github.io">Rafael de Andrade Moral</a>, Maynooth University, Ireland</li>
 <li><a href="https://ardiad.github.io">David Ardia</a>, HEC Montréal, Canada</li>
-<li><a href="https://arelbundock.com">Vincent Arel-Bundock</a>, University of Montreal, Canada</li>
 <li><a href="https://www.sumsar.net">Rasmus Bååth</a>, Lund University, Sweden</li>
+<li><a href="https://maciejberesewicz.com/">Maciej Beręsewicz</a>, Poznań University of Economics and Business, Poland</li>
 <li><a href="https://pbiecek.github.io">Przemek Biecek</a>, University of Warsaw, Poland</li>
 <li><a href="https://kevinburke.ie">Kevin Burke</a>, University of Limerick, Ireland</li>
 <li><a href="https://mine-cr.com">Mine Çetinkaya-Rundel</a>, Duke University, USA</li>
@@ -2278,7 +2278,7 @@ d-article > * {
 </ul>
 <h2 id="technical-editor">Technical editor</h2>
 <ul>
-<li><a href="https://mitchelloharawild.com">Mitchell O’Hara-Wild</a>, Nectric, Australia</li>
+<li><a href="https://www.linkedin.com/in/abhishek-ulayil-666b647b/">Abhishek Ulayil</a>, India</li>
 </ul>
 <h2 id="editorial-advisory-board">Editorial advisory board</h2>
 <ul>
@@ -2294,7 +2294,7 @@ d-article > * {
 Plummer (2012), Hadley Wickham (2013), Deepayan Sarkar (2014), Bettina Grün
 (2015), Michael Lawrence (2016), Roger Bivand (2017), John Verzani (2018),
 Norman Matloff (2019), Michael Kane (2020), Dianne Cook (2021), Catherine
-Hurley (2022), Simon Urbanek (2023), Mark van der Loo (2024)</p>
+Hurley (2022), Simon Urbanek (2023), Mark van der Loo (2024), Rob Hyndman (2025)</p>
 <h2 id="past-associate-editors">Past Associate Editors</h2>
 <ul>
 <li>Romain Lesur, INSEE, France (2024)</li>
