deploy: f9fcc792e85cb2ff78ad99b9b13dfce589d24b38

--- a/editors.html
+++ b/editors.html
@@ -2236,11 +2236,11 @@ d-article > * {
 </style>
 </div>
 <h2 id="editor-in-chief">Editor-in-Chief</h2>
-<p><a href="https://emitanaka.org">Emi Tanaka</a>, Australian National University, Australia</p>
+<p><a href="https://emitanaka.org">Emi Tanaka</a>, Australian National University, Australia. <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></p>
 <h2 id="executive-editors">Executive editors</h2>
 <ul>
 <li><a href="https://arelbundock.com">Vincent Arel-Bundock</a>, University of Montreal, Canada</li>
-<li><a href="https://robjhyndman.com">Rob Hyndman</a>, Monash University, Australia. <a href="mailto:r-journal@r-project.org" class="email">r-journal@r-project.org</a></li>
+<li><a href="https://robjhyndman.com">Rob Hyndman</a>, Monash University, Australia.</li>
 <li><a href="https://www.emilyzabor.com">Emily Zabor</a>, Case Western Reserve University, Cleveland Clinic and Taussig Cancer Institute, USA.</li>
 </ul>
 <h2 id="associate-editors">Associate editors</h2>
