deploy: 372631b10f77c832f2deebcd93c54b572fb7bb06

--- a/submissions.html
+++ b/submissions.html
@@ -2251,6 +2251,8 @@ d-article > * {
 <p>For now, we still accept submissions written in LaTeX, but they will be processed more slowly.</p>
 <p>If you do use LaTeX, you must use the <a href="https://github.com/rjournal/share/raw/refs/heads/master/RJtemplate.zip">LaTeX template</a>. Instructions on using this template are provided in the <a href="https://github.com/rjournal/share/raw/refs/heads/master/author-guide.pdf">LaTeX author guide</a>. LaTeX submissions that do not follow these guidelines will be rejected without review.</p>
 <p>The <code>rjtools</code> check functions described below can also be applied to check your files prior to submission.</p>
+<h3 id="bib-files">bib files</h3>
+<p>Whether you use Rmarkdown or LaTeX, your references need to be contained in a <code>.bib</code> file. Please do not send us enormous bib files containing many references that you do not cite. Your submitted bib file should contain only the references actually cited in your paper. Please also check that all references fields are properly formatted. To preserve capitalization, wrap words such as <code>{R}</code> or package names in braces. Do not wrap all titles in braces, as this overrides the journal’s reference style.</p>
 <h1 id="checking-your-article">Checking your article</h1>
 <p>The <code>rjtools</code> package has a number of functions which can help you check that your article is ready to submit. These include:</p>
 <ul>
