deploy: 6e32b9bbe82e7e1c868fa6f075005859152196fd

--- a/submissions.html
+++ b/submissions.html
@@ -2271,7 +2271,7 @@ d-article > * {
 <li>Each of these can also be run individually.</li>
 </ul>
 <h1 id="submitting-your-article">Submitting your article</h1>
-<p>To submit an article to the R Journal, you will need to complete <a href="https://forms.gle/ykj6QcoGQD5ctnA5A">this form</a>.</p>
+<p>To submit an article to the R Journal, you will need to complete <a href="https://forms.gle/Eqkf6cFJM3mjuxZUA">this form</a>.</p>
 <p>Your files will need to be uploaded in a zip file that should contain:</p>
 <ul>
 <li>The article in <code>.pdf</code> format.</li>
