deploy: 0d66a4bcb0a5ebafc99d9e538cc6c45017841f60

--- a/submissions.html
+++ b/submissions.html
@@ -2244,6 +2244,7 @@ d-article > * {
 <p>Creative uses of interactive content in HTML formatted articles is encouraged. This will require conditional evaluation of code chunks with appropriate re-captioning, and conditional inline reference links. Interactive plots should be produced with a manageable file size (aim for under 10Mb) which may require small data examples.</p>
 <p>Figures and tables should have alt-text in chunk specifications, to assist with accessibility.</p>
 <p>Titles and abstract should be in plain text, with the abstract no more than 250 words.</p>
+<p>Ensure that R outputs are from an evaluation of R code rather than manually entering the outputs in the Rmd file.</p>
 <h3 id="rmarkdown-using-rticles">Rmarkdown using rticles</h3>
 <p>The <code>rticles::rjournal_article</code> output format has been deprecated in favour of <code>rjtools</code>. Please use <code>rjtools</code> instead of <code>rticles</code>.</p>
 <h3 id="latex-format">LaTeX format</h3>
