deploy: 7691fe836617853a776ec7f361e9beb5e9c697c3

--- a/issues/2025-4/index.html
+++ b/issues/2025-4/index.html
@@ -2463,7 +2463,7 @@ d-appendix d-footnote-list a.footnote-backlink {
 <p><a href="../../articles/RJ-2025-039/">simlandr: Simulation-Based Landscape Construction for Dynamical Systems</a><br>Jingmeng Cui, Merlijn Olthof, Anna Lichtwarck-Aschoff, Tiejun Li and Fred Hasselman 173</p>
 <p><a href="../../articles/RJ-2025-040/">rvif: a Decision Rule to Detect Troubling Statistical Multicollinearity Based on Redefined VIF</a><br>Román Salmerón-Gómez and Catalina B. García-García 192</p>
 <p><a href="../../articles/RJ-2025-045/">ASML: An R Package for Algorithm Selection with Machine Learning</a><br>Ignacio Gómez-Casares, Beatriz Pateiro-López, Brais González-Rodríguez and Julio González-Díaz 216</p>
-<p><a href="../../articles/RJ-2025-041/">elhmc: An R Package for Hamiltonian Monte Carlo Sampling in Bayesian Empirical Likelihood</a><br>Dang Trung Kien 237</p>
+<p><a href="../../articles/RJ-2025-041/">elhmc: An R Package for Hamiltonian Monte Carlo Sampling in Bayesian Empirical Likelihood</a><br>Neo Han Wei, Dang Trung Kien and Sanjay Chaudhuri 237</p>
 <p><a href="../../articles/RJ-2025-042/">GeRnika: An R Package for the Simulation, Visualization and Comparison of Tumor Phylogenies</a><br>Aitor Sánchez-Ferrera, Maitena Tellaetxe-Abete and Borja Calvo-Molinos 255</p>
 <p><a href="../../articles/RJ-2025-044/">MultiATSM: An R Package for Arbitrage-Free Macrofinance Multicountry Affine Term Structure Models</a><br>Rubens Moura 275</p>
 <p><a href="../../articles/RJ-2025-043/">memshare: Memory Sharing for Multicore Computation in R with an Application to Feature Selection by Mutual Information using PDE</a><br>Michael C. Thrun and Julian Märte 304</p>
